# ni_usb6009_logger

./: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
USB-6009 test scripts/: daq_diag.py  test_ai.py
logs/: ni_Dev1_20250825_142647.csv  run.xlsx  run_1.xlsx  run_2.xlsx  run_3.xlsx
src/ni_usb6009_logger/: cli - Copy 20250902.py  cli.py  ni_csv_logger.py-old
src/ni_usb6009_logger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
